<resources>
    <string name="app_name">sharewc</string>
    <string name="register_toilet">Register Toilet</string>
    <string name="find_toilet">Find Toilet</string>
    <string name="view_toilets">View Toilets</string>
    <string name="toilet_registration">Toilet Registration</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="select_location">Select Location</string>
    <string name="price">Price</string>
    <string name="registration_number">Registration Number</string>
    <string name="register">Register</string>
</resources>