<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ToiletRegistrationActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toilet_registration"
        android:textSize="20sp"
        android:textStyle="bold"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:background="#EEEEEE" />

    <EditText
        android:id="@+id/nameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:padding="16dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/locationEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location"
        android:padding="16dp" />

    <Button
        android:id="@+id/selectLocationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_location"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="16dp" />

    <EditText
        android:id="@+id/priceEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="number"
        android:padding="16dp" />

    <EditText
        android:id="@+id/registrationNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:padding="16dp"
        android:hint="@string/registration_number"/>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:padding="16dp" />

</LinearLayout>
