<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_toilet"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/findToiletButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_toilet"
        android:layout_centerInParent="true" />

    <Button
        android:id="@+id/viewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_toilets"
        android:layout_below="@id/registerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

</RelativeLayout>
